...
    func show(quiz result: AlertModel, isShowRestart: Bool) {
        
        let alert = UIAlertController(title: result.title,
                                      message: result.message,
                                      preferredStyle: .alert)
        
        alert.view.accessibilityIdentifier = "quizAlert"
        
        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            
            guard let _ = self else { return }
            
            result.completion()
...
